# Desafio-Backend

./: .dockerignore  .gitattributes  Dockerfile  README.md  create_superuser.py  db.sqlite3  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
config/: settings.py  urls.py
tasks/: models.py  serializers.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_task_is_deleted_alter_task_created_at_and_more.py
