[tool.poetry]
name = "desafio-backend"
version = "0.1.0"
description = "Desafio para Backend Junior"
authors = ["Jose Guilherme Lins"]
readme = "README.md"
packages = [{ include = "config" }]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
djangorestframework = "^3.15.2"
taskipy = "^1.13.0"
ruff = "^0.6.1"
drf-yasg = "^1.21.7"
setuptools = "^72.2.0"
djangorestframework-simplejwt = "^5.3.1"
psycopg2-binary = "*"


[tool.ruff]
line-length = 150
extend-exclude = ['migrations', 'manage.py', 'tests.py', 'create_superuser.py']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
run = 'task test && python manage.py runserver'
test = 'python manage.py test tasks'
migrations = 'python manage.py makemigrations'
migrate = 'python manage.py migrate'
create_user = 'python create_superuser.py'



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
